[metadata]
name = vnpy_pgsqlsnapshot
version = 1.0.0
url = https://www.vnpy.com
license = MIT
author = Ting Yu
author_email = tingle2008@gmail.com
description = take snapshot for (account/position/trade/order)
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
    investment
classifiers =
    Development Status :: 5 - Production/Stable
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Office/Business :: Financial :: Investment
    Programming Language :: Python :: Implementation :: CPython
    License :: OSI Approved :: MIT License
    Natural Language :: Chinese (Simplified)

[options]
packages = find:
zip_safe = False
install_requires = 
    psycopg2
